--- a/app/src/main/res/layout/activity_log_view.xml
+++ b/app/src/main/res/layout/activity_log_view.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <TextView android:id="@+id/logview_tv_fileview"
+            android:textScaleX="10sp"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </ScrollView>
