--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,14 +17,15 @@
         app:layout_constraintTop_toTopOf="parent"
         android:textAlignment="center"/>
 
-    <Button android:id="@+id/main_button_view_log"
+    <TextView android:id="@+id/main_tv_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Status: "
+        android:padding="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/main_tv_explain"
-        android:layout_marginTop="20dp"
-        android:text="View Log"
-        android:onClick="launchLogViewActivity"/>
+        android:textAlignment="center"/>
+
 
 </android.support.constraint.ConstraintLayout>
