Improved file upload. It now happens automatically after an app updates.
Misc. small fixes such as better user interface in logview and formal FQDN

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.fandm.enovak.updatetimingcollector.Main">
+    tools:context="edu.fandm.enovak.updatetimingcollector.Main"
+    android:padding="5dp">
+
+    <ImageView
+        android:layout_width="325dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/main_tv_explain"
+        android:src="@drawable/banner" />
 
     <TextView android:id="@+id/main_tv_explain"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:text="The app keeps a log of application updates.  The only information it stores is the application name, the version, and the date each time an app is updated or installed.  You can view the log anytime!"
-        android:padding="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -29,3 +37,4 @@
 
 
 </android.support.constraint.ConstraintLayout>
+
