--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,6 +2,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/view_status"
+        app:showAsAction="never"
+        android:title="Status"/>
+
+    <item
         android:id="@+id/view_log"
         app:showAsAction="never"
         android:title="View Log"/>
