--- a/app/src/main/res/layout/activity_status.xml
+++ b/app/src/main/res/layout/activity_status.xml
@@ -57,7 +57,7 @@
     <TextView android:id="@+id/status_tv_server_ts_val"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0 Bytes"
+        android:text="Never"
         android:textColor="#bbbbbb"
         android:textSize="16sp"
         android:layout_marginLeft="20dp"
@@ -75,7 +75,7 @@
     <TextView android:id="@+id/status_tv_bytes_contrib"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="You Have Contributed:"
+        android:text="You Have Collected:"
         android:textColor="#222222"
         android:textSize="16sp"
         android:layout_margin="20dp"
