Added IMEI number to status screen (for benefit of AMT users)

--- a/app/src/main/res/layout/activity_status.xml
+++ b/app/src/main/res/layout/activity_status.xml
@@ -92,4 +92,33 @@
         app:layout_constraintLeft_toRightOf="@+id/status_iv_bytes"
         app:layout_constraintTop_toBottomOf="@id/status_tv_bytes_contrib"/>
 
+
+    <ImageView android:id="@+id/status_iv_imei"
+        android:layout_height="64dp"
+        android:layout_width="64dp"
+        android:src="@mipmap/i_circle"
+        android:layout_margin="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/status_iv_bytes"/>
+
+    <TextView android:id="@+id/status_tv_imei_contrib"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Your IMEI Number:"
+        android:textColor="#222222"
+        android:textSize="16sp"
+        android:layout_margin="20dp"
+        app:layout_constraintLeft_toRightOf="@id/status_iv_imei"
+        app:layout_constraintBottom_toBottomOf="@id/status_iv_imei"/>
+
+    <TextView android:id="@+id/status_tv_imei_contrib_val"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="unknown"
+        android:textColor="#bbbbbb"
+        android:textSize="16sp"
+        android:layout_marginLeft="20dp"
+        app:layout_constraintLeft_toRightOf="@+id/status_iv_imei"
+        app:layout_constraintTop_toBottomOf="@id/status_tv_imei_contrib"/>
+
 </android.support.constraint.ConstraintLayout>
