Added ChartView Many small fixes / changes.

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,6 +12,11 @@
         android:title="View Log"/>
 
     <item
+        android:id="@+id/view_chart"
+        app:showAsAction="never"
+        android:title="View Chart" />
+
+    <item
         android:id="@+id/permissions_details"
         app:showAsAction="never"
         android:title="Permission Details"/>
