--- a/app/src/main/res/layout/activity_view_chart.xml
+++ b/app/src/main/res/layout/activity_view_chart.xml
@@ -6,18 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".ViewChart">
 
+    <TextView android:id="@+id/view_chart_tv_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="18dp" />
+
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/view_chart_barchart"
         android:layout_width="match_parent"
         android:layout_height="400dp"
-        android:layout_margin="10dp" />
+        android:layout_margin="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/view_chart_tv_title"/>
 
     <TextView android:id="@+id/view_chart_tv_detail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/view_chart_barchart"
         android:gravity="center"
-        android:textSize="18sp"
+        android:textSize="10sp"
         android:text=""/>
 
 
