--- a/app/src/main/res/layout/activity_view_chart.xml
+++ b/app/src/main/res/layout/activity_view_chart.xml
@@ -21,10 +21,19 @@
         android:layout_margin="10dp"
         app:layout_constraintTop_toBottomOf="@+id/view_chart_tv_title"/>
 
-    <TextView android:id="@+id/view_chart_tv_detail"
+    <TextView android:id="@+id/view_chart_tv_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/view_chart_barchart"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:textColor="#000000"
+        android:text=""/>
+
+    <TextView android:id="@+id/view_chart_tv_detail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/view_chart_tv_main"
         android:gravity="center"
         android:textSize="10sp"
         android:text=""/>
